--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+myproject/target/myproject-1.0-SNAPSHOT/WEB-INF/classes/com/tspi/models/TestModel.class
